2011-06-14  Per Bothner  <per@bothner.com>

	* Promise.java: Moved here from kawa.lang.

2011-04-25  Charles Turner  <chturne@gmail.com>
	    Per Bothner  <per@bothner.com>

	* WrongType.java (getMessage): Retrieve types from the
	currently default language.

2011-04-14  Per Bothner  <per@bothner.com>

	* InheritingEnvironment.java (namespaceMap, propertyMap): Remove
	fields - which are never actually set or used.
	(lookupInherited): Skip unused namespaceMap/propertyMap translation.

2010-11-27  Per Bothner  <per@bothner.com>

	* OutPort.java (finalizeAction): New field.
	* CharArrayOutPort.java (finalize): New empty method.
	(close, closeThis): Null out some fields.
	(finalize): Check finalizeAction and maybe flush or close.

2010-11-26  Per Bothner  <per@bothner.com>

	* Symbol.java (<init>(Namespace,String)): Swap argument order.
	Change from public to protected, to fix overloading resolution
	problems from Scheme 'symbol' constructor function.
	(makeUninterned): Publicly-visible alternative.
	* SimpleSymbol.java: Update accordingly.
	* Namespace.java: Likewise.

2010-10-21  Per Bothner  <per@bothner.com>

	* CallContext.java (getArgCount): New method.

2010-10-15  Per Bothner  <per@bothner.com>

	* MethodProc.java (getParameterType): Handle varargs methods.

	* ThreadLocation.java (getLocation): Remove some dead code.

2010-10-06  Per Bothner  <per@bothner.com>

	* Procedure.java (getReturnType): New semi-deprecated method
	replaces method in Inlineable interface.

2010-09-20  Per Bothner  <per@bothner.com>

	* Procedure.java (minArgs, maxArgs): New static methods.
	Use them as appropriate.

2010-08-27  Per Bothner  <per@bothner.com>

	* Procedure.java (inlineCallsKey): Remove constant field.

2010-08-26  Per Bothner  <per@bothner.com>

	* Procedure.java (inlinerKey): Remove constant field.
	(validateApplyKey): New constant field.

2010-08-20  Per Bothner  <per@bothner.com>

	* ThreadLocation.java (makePrivate): Renamed to ..
	(makeAnonymous): New method name.