@@ -1,0 +1,6 @@
+package gnu.mapping;
+
+public interface Lazy<T>
+{
+    public T force() throws Throwable;
+}
