@@ -7,9 +7,17 @@
         <nbjpdastart addressproperty="jpda.address" name="Kawa" transport="dt_socket">
             <classpath path="${build.classes}"/>
         </nbjpdastart>
+<!--
+        <java classname="gnu.jemacs.lang.ELisp" classpath="${build.classes}" fork="true" taskname="kawa">
+            <jvmarg value="-Xdebug"/>
+            <jvmarg value="-Xrunjdwp:transport=dt_socket,address=${jpda.address}"/>
+        </java>
+-->
         <java classname="kawa.repl" classpath="${build.classes}" fork="true" taskname="kawa">
             <jvmarg value="-Xdebug"/>
             <jvmarg value="-Xrunjdwp:transport=dt_socket,address=${jpda.address}"/>
+	    <arg value="--no-prompt"/>
+	    <arg value="-w"/>
         </java>
     </target>
 </project>
