@@ -4,7 +4,7 @@
 
 (module-export dvar-test-1 factorial-4 check-fluid-let *VAR*
 	       namespace-syntax-call list-length-4 my-compare
-	       test3-import1 get3-mod0-v2 set3-mod0-v2
+	       test3-import1 get3-mod0-v2 set3-mod0-v2 counter-test-result
 	       pa-new pa-getter pa-setter pa-length iarr-set mB test1-import0)
 
 (define (get3-mod0-v1) :: <object> mod0-v1)
@@ -82,3 +82,9 @@
        ((fn o)
         (simpleAux:init o)
         (list (slot-ref o 'x) name))))))
+
+;; Andre van Tonder <andre@het.brown.edu> example in posting 2011-04-19.
+(define counter-test-result
+  (let* ((a (counter-macro))
+         (b (counter)))
+    (list a b)))
