@@ -1,4 +1,4 @@
-(test-init "Objects" 135)
+(test-init "Objects" 136)
 
 ;; Force procedure to be applied without being inlined:
 (define-syntax force-eval
@@ -192,6 +192,8 @@
 	(set3-mod0-v2 (+ 100 v2))
 	(list v2 (get3-mod0-v2))))
 (test 25 'test-mod2-v5  mod2-v5)
+
+(test '(1 2) 'counter-test-result counter-test-result)
 
 (define ts1 (make <MyTimestamp> 10 1))
 (define ts2 (make <MyTimestamp> 10 2))
